src/test/resources/inspections/codeError/FileClassnameCaseInspection/NamespacedDummy.php
<?php

namespace NamespacedDummy;

class <error descr="🔨 PHP Hammer: Class name (\"namespacedDummy\") does not match the file that stores it (\"NamespacedDummy.php\").">namespacedDummy</error> {
}
